--- a/big_styles.css
+++ b/big_styles.css
@@ -5,7 +5,7 @@ body {
 }
 
 header {
-    /* position: fixed; */
+    position: fixed;
     top: 0;
     left: 0;
     margin-bottom: auto;
@@ -33,7 +33,8 @@ nav li {
 #bio {
     /* background-color: lightcoral; */
     text-align: center;
-    position: relative;
+    /* position: relative; */
+    margin-top: 100px;
     /* top: 100px; */
 }
 
@@ -96,7 +97,7 @@ input[type="text"] {
 
 textarea {
     width: 90%;
-    max-width: 90%;
+    /* max-width: 90%; */
     height: 80px;
 }
 
