--- a/big_styles.css
+++ b/big_styles.css
@@ -4,14 +4,15 @@ body {
     /* text-align: center; */
 }
 
-header {
+/* header {
     position: fixed;
     top: 0;
     left: 0;
     margin-bottom: auto;
+    margin-bottom: 10%;
     background-color: greenyellow;
     width: 100%;
-}
+} */
 
 #pg-header {
     color:navy;
