--- a/big_styles.css
+++ b/big_styles.css
@@ -7,6 +7,10 @@
 body {
     background: darkslategrey;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    /* font-family: 'PixelOperatorRegular'; */
+    /* font-family: 'IndustrialRegular'; */
+    font-weight: normal;
+    font-style: normal;
 }
 
 header {
@@ -18,14 +22,32 @@ header {
     z-index:-99;
     width:100%;
     height:100%;
-    opacity: 10%;
 }
 
 #landingvid {
     height:100%;
     width:100%;
-    opacity: 10%;
+    /* pointer-events: none; */
 }
+
+#landinggrid {
+    position: absolute;
+    top: 20%;
+    left: 5%;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 3%;
+}
+
+.grid-item {
+    display: flex;
+    /* background-color: rgba(70, 66, 66,0.3); */
+    /* color: lightgray; */
+    /* padding: .25rem 0rem .25rem .25rem; */
+    /* border-radius: 3%; */
+    /* justify-content: center; */
+}
+
 .about {
     background-color: lightcoral;
     text-align: center;
@@ -67,45 +89,31 @@ header {
 }
 
 form {
-    background-color: gray;
-    /* align-items: center; */
-    text-align: center;
-    /* display: block; */
-    margin-top: 50px;
-    margin-left: 5%;
+    width: 33%;
+    min-width: 300px;
+    margin-top: 10%;
+    margin-left: auto;
     margin-right: auto;
-    width: 300px;
-    /* min-width: 300px; */
-    /* max-width: 99%; */
-    /* width: 33%; */
-    /* width: auto; */
-    height: auto;
-    /* max-height: 50%; */
     padding-bottom: 20px;
-    box-shadow: rgba(0,0,0,0.2) 0px 3px 5px, inset rgba(0,0,0,0.2) 0px -1px 2px;
-    border-radius: 5px;
-}
-
-#form-header {
-    padding-top: 20px;
+    text-align: center;
+    color: var(--coolgreen);
+    /* box-shadow: rgba(0,0,0,0.2) 0px 3px 5px, inset rgba(0,0,0,0.2) 0px -1px 2px; */
+    /* border-radius: 5px; */
 }
 
 input[type="text"] {
     width: 90%;
-    height: 30px;
 }
 
 textarea {
     width: 90%;
     max-width: 90%;
-    height: 80px;
 }
 
 input[type="submit"] {
     width: 35%;
-    height: 30px;
     background-color: navy;
-    color: white;
+    color: aliceblue;
 }
 
 input[type="submit"]:hover {
