--- a/css/big_styles.css
+++ b/css/big_styles.css
@@ -53,6 +53,8 @@ header {
     /* padding: .25rem 0rem .25rem .25rem; */
     /* border-radius: 3%; */
     justify-content: center;
+    align-items: center;
+    /* text-align: center; */
 }
 
 .sectionheader {
@@ -80,18 +82,36 @@ header {
     grid-template-columns: 1fr 1fr 1fr;
     /* grid-template-rows: 1fr; */
     grid-gap: 3%;
-    grid-template-areas:    'one two three'
-                            'one two four'
-                            'one two five'
-                            'six six six';
+    grid-template-areas:    'one    three  two'
+                            'one    five   two'
+                            'one    four   two'
+                            'six    six    six';
 }
 
-.aboutitem1 { grid-area: one; background-color: aquamarine; }
-.aboutitem2 { grid-area: two; background-color: aliceblue; }
+.aboutitem1 { grid-area: one; text-align:center; }
+.aboutitem2 { grid-area: two; text-align:center; }
 .aboutitem3 { grid-area: three; }
-.aboutitem4 { grid-area: four; background-color: aliceblue  ; }
+.aboutitem4 { grid-area: four; }
 .aboutitem5 { grid-area: five; }
 .aboutitem6 { grid-area: six; }
+
+.chadbutton {
+    width: 100%;
+    border: 1pt solid black;
+    border-radius: 1em;;
+    padding: 2%;
+    color: black;
+    text-align: center;
+    align-content: center;
+}
+
+#chadbutton1 {
+    background-color:rgb(255,219,88);
+}
+
+#chadbutton2 {
+    background-color: rosybrown;
+}
 
 #news_list {
     margin: 5%;
