--- a/css/big_styles.css
+++ b/css/big_styles.css
@@ -1,6 +1,7 @@
 
 :root {
     --coolgreen:#17b06b;
+    /* --coolgreen:rgb(47,249,36); */
     --mustard:rgb(255,219,88);
 }
 
@@ -11,8 +12,8 @@
     left: -999em;
 }
 
-
 body {
+    /* font-family: sans-serif; */
     /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
     /* font-family: "Liberation Mono"; */
     /* font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
@@ -22,6 +23,7 @@ body {
     /* font-weight: normal; */
     /* font-style: normal; */
     /* background-color: black; */
+    /* color: aliceblue; */
     margin: 15% 0 5% 0;
 }
 
@@ -81,8 +83,8 @@ a:hover {
 
 .about-item {
     display: flex;
-    padding: .25rem 0rem .25rem .25rem;
-    background-color: tan;
+    padding: 1%;
+    /* background-color: tan; */
     border: 1pt solid black;
     /* justify-content: center; */
     /* align-items: center; */
@@ -98,7 +100,7 @@ a:hover {
     color: purple;
 }
 
-#project-container {
+.project-container {
     display: flex;
     flex-flow: row wrap;
     justify-content: space-evenly;
@@ -111,10 +113,11 @@ a:hover {
 .project-item {
     background-color: inherit;
     /* mix-blend-mode: difference; */
-    color: black;
+    /* color: black; */
     /* color: white; */
+    color: inherit;
     text-decoration: none;
-    /* border: 1pt solid black; */
+    border: 1pt solid black;
     justify-content: center;
     align-items: center;
     text-align: center;
