temp formatting changes for review

--- a/css/big_styles.css
+++ b/css/big_styles.css
@@ -85,7 +85,7 @@ a:hover {
     display: flex;
     padding: 1%;
     /* background-color: tan; */
-    border: 1pt solid black;
+    /* border: 1pt solid black; */
     /* justify-content: center; */
     /* align-items: center; */
     /* text-align: center; */
