--- a/css/big_styles.css
+++ b/css/big_styles.css
@@ -6,7 +6,7 @@
 }
 
 :root:before {
-    content:    url('img/*');
+    content:    url('/img/*');
     visibility: hidden;
     position: absolute;
     left: -999em;
@@ -14,30 +14,14 @@
 
 body {
     /* font-family: sans-serif; */
-    /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
-    /* font-family: "Liberation Mono"; */
-    /* font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
-    /* font-family: 'PixelOperatorRegular'; */
-    /* font-family: 'IndustrialRegular'; */
-    /* font-family: 'Courier New'; */
-    /* font-weight: normal; */
-    /* font-style: normal; */
-    /* background-color: black; */
-    /* color: aliceblue; */
-    margin: 15% 0 5% 0;
-}
-
-#landing {
-    position: fixed;
-    z-index:-99;
-    width:100%;
-    height:100%;
-}
-
-#landingvid {
-    height:100%;
-    width:100%;
-    pointer-events: none;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: black;
+    color: aliceblue;
+    text-shadow:    -1pt -1pt 0 #000,
+                    1pt -1pt 0 #000,
+                    -1pt 1pt 0 #000,
+                    1pt 1pt 0 #000;
+    /* margin: 15% 0 5% 0; */
 }
 
 .sectionheader {
@@ -49,8 +33,7 @@ body {
 
 a:hover {
     color: var(--coolgreen);
-    /* background-color: palegreen; */
-    /* color: orchid; */
+    /* background-color: aliceblue; */
     text-decoration: none;
 }
 
@@ -76,28 +59,67 @@ a:hover {
     }
 }
 
-.item1 { grid-area: one; }
-.item2 { grid-area: two; }
+.item1 {
+    grid-area: one;
+    font-size: 2rem;
+    margin-top:7%;
+}
+.item2 { 
+    grid-area: two;
+    text-align: center;
+    align-items: center;
+}
+
 .item3 { grid-area: three; }
-.item4 { grid-area: four; }
+
+.item4 { 
+    grid-area: four;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    background-color: inherit;
+}
 
 .about-item {
     display: flex;
     padding: 1%;
-    /* background-color: tan; */
-    /* border: 1pt solid black; */
-    /* justify-content: center; */
-    /* align-items: center; */
-    /* text-align: center; */
 }
 
-.placeholder {
-    width: 75%;
+#big-vid-section{
+    display: flex;
+    position: relative;
+    overflow: hidden;
+    height: 500px;
+    margin-top: 10%;
+    color: var(--coolgreen);
+}
+
+#big-vid-text{
+    z-index: 1;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: var(--mustard);
-    color: purple;
+    font-size: x-large;
+}
+
+#vid-button{
+    color: var(--coolgreen);
+}
+
+#big-vid {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
+    overflow: hidden;
+    pointer-events: none;
+    opacity: 0.5;
+    visibility: hidden;
+    background-color: darkolivegreen;
 }
 
 .project-container {
@@ -121,10 +143,10 @@ a:hover {
     justify-content: center;
     align-items: center;
     text-align: center;
-    /* text-shadow:    -1pt -1pt 0 #000,
+    text-shadow:    -1pt -1pt 0 #000,
 				    1pt -1pt 0 #000,
 				    -1pt 1pt 0 #000,
-				    1pt 1pt 0 #000; */
+				    1pt 1pt 0 #000; 
     /* margin: 1%; */
     padding: 2%;
 }
