--- a/css/big_styles.css
+++ b/css/big_styles.css
@@ -13,15 +13,13 @@
 }
 
 body {
-    /* font-family: sans-serif; */
-    /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
     background-color: black;
     color: aliceblue;
     text-shadow:    -1pt -1pt 0 #000,
                     1pt -1pt 0 #000,
                     -1pt 1pt 0 #000,
                     1pt 1pt 0 #000;
-    /* margin: 15% 0 5% 0; */
+    margin: 7% 0 5% 0;
 }
 
 .sectionheader {
@@ -134,20 +132,16 @@ a:hover {
 
 .project-item {
     background-color: inherit;
-    /* mix-blend-mode: difference; */
-    /* color: black; */
-    /* color: white; */
     color: inherit;
     text-decoration: none;
     border: 1pt solid black;
     justify-content: center;
     align-items: center;
     text-align: center;
-    text-shadow:    -1pt -1pt 0 #000,
+    /* text-shadow:    -1pt -1pt 0 #000,
 				    1pt -1pt 0 #000,
 				    -1pt 1pt 0 #000,
-				    1pt 1pt 0 #000; 
-    /* margin: 1%; */
+				    1pt 1pt 0 #000;  */
     padding: 2%;
 }
 
