removed gif due to size, forced low resolution for yt vid, enabled lazy iframe loading

--- a/css/big_styles.css
+++ b/css/big_styles.css
@@ -120,10 +120,10 @@ a:hover {
     pointer-events: none;
     opacity: 0.5;
     visibility: hidden;
-    background-image: url(/img/train_02.gif);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-color: darkolivegreen;
+    /* background-image: url(/img/train_02.gif); */
+    /* background-size: cover; */
+    /* background-repeat: no-repeat; */
+    /* background-color: darkolivegreen; */
 }
 
 .project-container {
