adjusted the formatting for expertise area

--- a/css/big_styles.css
+++ b/css/big_styles.css
@@ -79,6 +79,7 @@ a:hover {
     flex-flow: row wrap;
     justify-content: left;
     background-color: inherit;
+    font-size: 3rem;
 }
 
 .about-item {
